Fix footer position and adjust image overflow

--- a/styles.css
+++ b/styles.css
@@ -153,7 +153,7 @@ main a[href^="mailto:"]{
     height: auto;          
     object-fit: contain;
    flex: 1;
-   overflow: visible;
+   
 }
 
 
@@ -161,6 +161,8 @@ main a[href^="mailto:"]{
     background-color: #222;
     color: white;
     padding: 5px 0px;
+   position: fixed;
+    bottom: 0;
 }
 
 
